app/assets/stylesheets/application.css.scss
//= require bootstrap_and_overrides
//= require jqtree
//= require raj
//= require_self
//= require ./things
//= require ./tags
//= require ./jquery-ui
//= require select2
//= require select2-bootstrap

@import "base";
@import "font_awesome";
@import "select2";

body {
  font-size: 2.3em;
}
@media (min-width: 768px) {
  body {
    font-size: 2.2em;
  }
}
@media (min-width: 992px) {
  body {
    font-size: 2.1em;
  }
}
@media (min-width: 1024) {
  body {
    font-size: 1.9em;
  }
}
@media (min-width: 1200px) {
  body {
    font-size: 1.8em;
  }
}

.navbar > .container .navbar-brand, .navbar > .container-fluid .navbar-brand {
  margin-left: 0;
}

.op25 {
  opacity: 0.25;
}
.op50 {
  opacity: 0.5;
}
.op75 {
  opacity: 0.75;
}
.op90 {
  opacity: 0.90;
}

.panel-heading {
  h3 {
    margin-top: 10px;
  }
}

.hidden {
  visibility: none;
  display: none;
}

#quick-search {
  input[type="text"] {
    // position: relative;
    // top: 0.1em;
    width: 100%;
  }
  label {
    font-size: 0.8em;
    font-weight: normal;
  }
  hr {
    margin-top: 10px;
    margin-bottom: 10px;
    border: 0;
    border-top: 1px solid #ddd;
  }
}

body.development {
  .navbar-inverse {
    $development-color: #BF0360;
    background-color: $development-color;
    border-color: $development-color;
    .navbar-nav li a {
      color: #DA83D5;
    }
  }

}

.alert {
  position: absolute;
  right: 15px;
}

// Prevent user select on items we don't want
.jqtree_common {
  user-select: none;
  -webkit-user-select: none;
}

* {
  -webkit-touch-callout: none;
  -webkit-tap-highlight-color: rgba(0,0,0,0);
}

